--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./server.js",
+    "build": "node server --exec 'npm start -s'"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.8.0",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "nodemon": "^3.0.1"
   }
 }
