package file changes commit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./server.js",
-    "build": "node server --exec 'npm start -s'"
+    "build": "node ./server.js",
+    "start": "node ./server.js"
   },
   "author": "",
   "license": "ISC",
